# MagacinTracker

./: .dockerignore  .env  .gitignore  ALL_PAGES_FIXED_SUMMARY.md  ANALYTICS_REPORTS_FIXED.md  CLEANUP_SUMMARY.md  CLEAR_BROWSER_CACHE_INSTRUCTIONS.md  COMPLETE_IMPLEMENTATION_STATUS.md  COMPLETE_SPRINTS_SUMMARY.md  COMPLETE_WHITE_THEME_DEPLOYMENT.md  CONSOLE_DEBUG_INSTRUCTIONS.md  CUNGU_WMS_ALL_12_SPRINTS_COMPLETE.md  CUNGU_WMS_CLOUD_FINAL_COMPLETE.md  CUNGU_WMS_COMMERCIAL_LAUNCH_COMPLETE.md  DEBUG_PWA_VALIDATION_ISSUE.md  DELETE_AND_SYNC_FIXED.md  DELETE_FINISHED_DOCUMENTS_FIXED.md  END_TO_END_TESTING_GUIDE.md  FINAL_COMPLETE_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_PHASES_1_AND_2_COMPLETE.md  FINAL_UPDATE_SUMMARY.md  FINAL_WHITE_THEME_SUMMARY.md  ICON_DEBUG_DEPLOYED.md  INSTALLATION-SUMMARY.md  PANTHEON_DEPLOYMENT_READY.md  PANTHEON_HOTFIX_COMPLETE.md  PANTHEON_IMPLEMENTATION_COMPLETE.md  PANTHEON_NETWORK_ISSUE.md  PANTHEON_READY_FOR_TESTING.md  PWA_HEADER_IMPLEMENTATION.md  PWA_REASON_VALIDATION_ENHANCED.md  PWA_REASON_VALIDATION_FIX.md  PWA_ZXING_INTEGRATION_COMPLETE.md  QUICKSTART.md  QUICK_START_UPDATED_PWA.md  QUICK_START_WHITE_THEME.md  README.md  README_IMPLEMENTATION_COMPLETE.md  READY_TO_PUSH_SUMMARY.md  (+40 more)
backend/: README.md  pyproject.toml  requirements.txt
backend/app_common/: cache.py  config.py  db.py  events.py  feature_flags.py  health.py  logging.py  middleware.py  pantheon_client.py  pantheon_config.py  security.py
backend/services/: __init__.py
backend/tests/: conftest.py  test_catalog_service.py  test_happy_path.py  test_import_parser.py  (+4 more)
(+483 files in other folders)
